--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "name": "Load Impact"
   },
   "license": "MIT",
+  "keywords": [
+    "loadimpact",
+    "loadtest",
+    "postman"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/loadimpact/postman-to-loadimpact.git"
@@ -14,6 +19,7 @@
   "engines": {
     "node": ">= 0.10.0"
   },
+  "preferGlobal": "true",
   "bin": {
     "postman-to-loadimpact": "bin/postman-to-loadimpact.js"
   },
